--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -288,7 +288,9 @@ Finally, we investigated the situation in which the parental number in the popul
 
 We theoretically developed unbiased estimators of the contemporary migration number (${\hat M_1}$--${\hat M_5}$) and migration rate (${\hat m_1}$--${\hat m_4}$) between two populations in iteroparous species. The proposed estimators are based on known PO relationship and HS relationships observed between and within two populations without any error of kinship assignment. Users can choose the estimator developed for the situation as to whether the parental number of population 1 ($N_1$) and/or that of population 2 ($N_2$) is known ({\bf Table~\ref{parameter}}). The performance of the estimator (accuracy and precision) was quantitatively evaluated by running an individual-based model ({\bf Figure~\ref{violins}}; see also {\bf Table S1} in {\bf Supporting Information}). Our modeling framework utilizes several types of reproductive variations (survived offspring number per parent), including variance of reproductive potential between and within populations, taking account of several situations, including a body-size structure or environmental heterogeneity for reproductive success.
 
-There are several novelties of this study. First, we formulated probabilities of kinship pairs randomly chosen between two populations, which provide estimators of the migration number or rate. While similar derivations are found in the context of a mark-recapture method (REF), these are limited to the situation such that sampling can be non-invasive and adult individuals are sampled. Our proposed method can avoid such limitations, where such advantages are generally characterized in CKMR method. Second, we reveal that the probabilities and then the estimators are approximately independent of reproductive potential if migration event and the potential are independent. It is useful property of the estimators because heterogeneity of reproductive potential within/between populations are well-known in iteroprous species. Third, we demonstrate applicability that the estimation can be obtained only from the genetic data. 
+We presented mainly three novel points in this paper. First, we formulated probabilities of kinship pairs randomly chosen between two populations ($\pi_{\rm HS,bet}$ and $\pi_{\rm PO,bet}$), which provide estimators of the migration number or rate. While similar derivations are found in the context of a mark-recapture method (REF), these are limited to the situation such that sampling can be non-invasive and adult individuals are sampled. Our proposed method can avoid these limitations, where such advantages are generally characterized in CKMR method. Second, we revealed that the probabilities of kinship pairs are approximately independent of reproductive potential and thus information about it is not needed for the estimation, if migration event and the potential are independent. This is a useful property of the estimators because heterogeneity of reproductive potential within/between populations are generally observed in iteroprous species. Third, we demonstrate applicability that the estimation can be obtained only from the genetic data, and there are numerous advantages in using the proposed estimator instead of separately estimating $\pi_{\rm HS,bet}$ (and/or $\pi_{\rm PO,bet}$) (via genetic method) and $N_1$ (and/or $N_2$) (via nongenetical method). 
+
+\RED{kokomade!!!!!!!!!!!!!!!!!!!!}
 
 To estimate the contemporary migration number or migration rate, our simulation-based results provide guidance for a sample size to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). Even if there is no information about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. Furthermore, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project (see also Equations~\ref{RS-1} and \ref{RS-2}). 
 
@@ -302,7 +304,7 @@ To estimate the contemporary migration number or migration rate, our simulation-
 %Case of small migration rate
 %Contemporary / historical migration rate
 
-\RED{kokomade!!!!!!!!!!!!!!!!!!!!}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{ACKNOWLEDGMENTS}
