--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-01-12 17:40:31 +0900 
+%% Created for Tetsuya Akita at 2022-01-14 18:16:23 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Anderson_2020,
+	abstract = {Abstract In the last five years, interest in close-kin mark--recapture (CKMR), a variant of mark--recapture that uses genetically inferred kin as `recaptures', has grown dramatically. However, understanding the basis of CKMR, and properly implementing it, remains challenging. This paper describes an R package, CKMRpop, for simulating age-structured populations with user-specified demography, overdispersed variance in reproductive success (allowing for different ratios of effective to census size) and random sampling of individuals. Using compiled code for the simulation makes it feasible to simulate populations of millions of individuals. From the simulation output, pairs of sampled individuals related within a user-specified number of generations are found. Such pairs form the foundation for CKMR inference, and simulating them provides insight for understanding the statistical basis for CKMR and for assessing the feasibility of CKMR in different scenarios. We predict that CKMRpop will serve as an important tool for researchers contemplating CKMR estimation of population size. Furthermore, the methods presented here for identifying and categorizing relationships beyond half-siblings allow a more complete picture of the wide variety of kin pairs encountered in populations. This identifies the fraction of kin pairs that may not be the target of a CKMR experiment, but may be inadvertently mistaken for a more closely related `target' kin pair. Additionally, as more distant kin categories will likely be accurately inferred from increasingly available and inexpensive whole genome resequencing, understanding the distributions of more distant relationships in populations is a first step towards broadening the scope of CKMR to include them.},
+	author = {Anderson, Eric C.},
+	date-added = {2022-01-14 18:14:09 +0900},
+	date-modified = {2022-01-14 18:16:06 +0900},
+	doi = {https://doi.org/10.1111/1755-0998.13513},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/1755-0998.13513},
+	journal = {Molecular Ecology Resources},
+	keywords = {abundance estimation, CKMR, close-kin mark--recapture, pairwise relationships},
+	title = {CKMRpop: Forward-in-time simulation and tabulation of pairwise kin relationships in age-structured populations},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1755-0998.13513},
+	year = {in press},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1755-0998.13513},
+	bdsk-url-2 = {https://doi.org/10.1111/1755-0998.13513}}
 
 @article{Akita_2020,
 	abstract = {Abstract This study develops a nearly unbiased estimator of the ratio of the contemporary effective mother size to the census size in a population, as a proxy of the ratio of contemporary effective size (or effective breeding size) to census size (Ne/N or Nb/N). The proposed estimator is based on both known mother--offspring (MO) and maternal-sibling (MS) relationships observed within the same cohort, in which sampled individuals in the cohort probably share MO relationships with sampled mothers. The rationale is that the frequency of MO and MS pairs contains information regarding the contemporary effective mother size and the (mature) census size, respectively. Therefore, the estimator can be obtained only from genetic data. We also evaluate the performance of the estimator by running an individual-based model. The results of this study provide the following: (a) parameter range for satisfying the unbiasedness, and (b) guidance for sample sizes to ensure the required accuracy and precision, especially when the order of the ratio is available. Furthermore, the results demonstrate the usefulness of a sibship assignment method for genetic monitoring, providing insights for interpreting environmental and/or anthropological factors fluctuating Ne/N (or Nb/N), especially in the context of conservation biology and wildlife management.},
