--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -292,14 +292,16 @@ We presented mainly three novel points in this paper. First, we formulated proba
 
 To estimate the contemporary migration number or migration rate, our simulation-based results provide guidance for a sample size to ensure the required accuracy and precision, especially if the order of the number of migrant parents and parental sizes are approximately known ({\bf Table S1} in {\bf Supporting Information}). Even if there is no information about these numbers, $1/\sqrt{H_{\rm HS, bet}}$ (or $1/\sqrt{H_{\rm PO, bet}}$) provides an approximate lower bound on the CV, which can be used as an indicator of the precision of ${\hat M}$ or ${\hat m}$. Furthermore, the condition that $n>\sqrt{N_2}$ is also used as rule of thumb especially when planning a research project (see also Equations~\ref{RS-1} and \ref{RS-2}). 
 
-There may be several cases where it is desirable to apply the proposed estimator. The first case is where there is a certain number of migrants between populations, e.g., $M>100$, which is too large to be detected by population genetics method if $M$ is interpreted as effective migration number. Information on movement between populations is essential for assessing population dynamics in the context of conservation and management, even if migrant number is so large that it cannot be genetically assigned to two populations. The second is the case of the application to genetic monitoring conducted annually. This is because proposed estimators have information about contemporary migration, thus the time series data for migration reflect environmental changes, which provides insights into the underlying ecological processes. In addition, HS pairs found within the genetic population provides $N_{\rm b}$ \cite[]{wang2009new}, which is also used for assessing a genetic health. The third case is where sampling adults is difficult due to conservation purpose or other reasons instead sampling offspring is relatively easy. In this case, although $N_2$ (and $N_1$) need to be given externally for the usage of $\hat m_1$ (and $\hat M_1$), there is presently no other method for estimating adult movement especially when two populations cannot be genetically distinct, indicating that proposed method has the potential to greatly widen the scope of population monitoring. 
+There may be several cases where it is desirable to apply the proposed estimator. The first case is where there is a certain number of migrants between populations, e.g., $M>100$, which is too large to be detected by population genetics method if $M$ is interpreted as effective migration number. Information on movement between populations is essential for assessing population dynamics in the context of conservation and management, even if migrant number is so large that it cannot be genetically assigned to two populations. The second is the case of the application to genetic monitoring conducted every reproductive timing (e.g., annually). This is because proposed estimators have information about contemporary migration, thus the time series data for migration reflect environmental changes, which provides insights into the underlying ecological processes. In addition, HS pairs found within the genetic population provides $N_{\rm b}$ \cite[]{wang2009new}, which is also used for assessing a genetic health. The third case is where sampling adults is difficult due to conservation purpose or other reasons instead sampling offspring is relatively easy. In this case, although $N_2$ (and $N_1$) need to be given externally for the usage of $\hat m_1$ (and $\hat M_1$), there is presently no other method for estimating adult movement especially when two populations cannot be genetically distinct, indicating that proposed method has the potential to greatly widen the scope of population monitoring. 
+
+Finally, we note several caveats in applying proposed method. Our theory for developing estimators assumes that kinships are detected without any error. There are many algorithms to detect kinship pairs from single nucleotide polymorphisms (SNPs) or short tandem repeats (STRs) (REF), although a HS pair requires many more DNA markers than a PO pair. In addition, iteroprous species potentially has several kinship types such as halfsib-uncle/nephew or halfsib-cousin, which are expected to appear frequently and should be correctly distinguished from HS pairs. It is desirable to estimate in advance how many markers are needed for kinship detections in target populations associated with simulation of a pedigree reconstruction including distant kinships (e.g., \cite{Anderson_2020}). 
 
 %必要条件としては、個体数管理のため、細かすぎる時空かんスケールはだめ。大雑把なpopulationを仮定したい時に限る（空間的に細かいグリッドは困難？）、集団構造がspecifyされた後に実施される。繁殖タイミングの間隔の移動を統合したもの、子供の移動については何も言ってない。
 
 
 \RED{kokomade!!!!!!!!!!!!!!!!!!!!}
 
-%Caveat: 近親判別エラー、selectivity, family correlated migration、
+%Caveat: selectivity, family correlated migration、skip spawning, 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{ACKNOWLEDGMENTS}
