--- a/latex/akita.bib
+++ b/latex/akita.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tetsuya Akita at 2022-01-19 12:23:43 +0900 
+%% Created for Tetsuya Akita at 2022-01-19 14:39:06 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wang_2009Genetics,
+	abstract = {{Likelihood methods have been developed to partition individuals in a sample into sibling clusters using genetic marker data without parental information. Most of these methods assume either both sexes are monogamous to infer full sibships only or only one sex is polygamous to infer full sibships and paternal or maternal (but not both) half sibships. We extend our previous method to the more general case of both sexes being polygamous to infer full sibships, paternal half sibships, and maternal half sibships and to the case of a two-generation sample of individuals to infer parentage jointly with sibships. The extension not only expands enormously the scope of application of the method, but also increases its statistical power. The method is implemented for both diploid and haplodiploid species and for codominant and dominant markers, with mutations and genotyping errors accommodated. The performance and robustness of the method are evaluated by analyzing both simulated and empirical data sets. Our method is shown to be much more powerful than pairwise methods in both parentage and sibship assignments because of the more efficient use of marker information. It is little affected by inbreeding in parents and is moderately robust to nonrandom mating and linkage of markers. We also show that individually much less informative markers, such as SNPs or AFLPs, can reach the same power for parentage and sibship inferences as the highly informative marker simple sequence repeats (SSRs), as long as a sufficient number of loci are employed in the analysis.}},
+	author = {Wang, J and Santure, A W},
+	date-added = {2022-01-19 14:38:46 +0900},
+	date-modified = {2022-01-19 14:39:04 +0900},
+	doi = {10.1534/genetics.108.100214},
+	eprint = {https://academic.oup.com/genetics/article-pdf/181/4/1579/42091234/genetics1579.pdf},
+	issn = {1943-2631},
+	journal = {Genetics},
+	month = {04},
+	number = {4},
+	pages = {1579-1594},
+	title = {{Parentage and Sibship Inference From Multilocus Genotype Data Under Polygamy}},
+	url = {https://doi.org/10.1534/genetics.108.100214},
+	volume = {181},
+	year = {2009},
+	bdsk-url-1 = {https://doi.org/10.1534/genetics.108.100214}}
 
 @article{Hastings_1993,
 	abstract = {A study of one of the simplest systems incorporating both dispersal and local dynamics, coupling two discrete time logistic equations, demonstrates several surprising features. Passive dispersal can cause chaotic dynamics to be replaced by simple periodic dynamics. Thus passive movement can be stabilizing, even in a deterministic model without underlying spatial variation in the dynamics. The boundary between initial conditions leading to qualitatively different dynamics can be a fractal, so it is essentially impossible to specify the asymptotic behavior in terms of the initial conditions. In accord with several recent studies of arthropods and earlier theoretical work, density dependence may only be detectable at a small enough spatial scale, so efforts to uncover density dependence must include investigations of movement.},
