--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -37,7 +37,7 @@
 \def\BLUE#1{\textcolor{blue}{#1}} %% 
 \begin{document}
 
-\title{Estimating contemporary migration rates for iteroparous species using kinship pairs found between populations}
+\title{Estimating contemporary migration rates of adults for iteroparous species using kinship pairs found between populations}
 \author{
 Tetsuya Akita$^{a}$\thanks{
 \emph{Corresponding author}:
@@ -84,6 +84,14 @@ Tetsuya Akita$^{a}$\thanks{
 %%%%%%%%%%%
 
 \section{INTRODUCTION}
+
+%conn & bravington も引用しないと
+% MigEst by Wangとの比較も...もう一度よくWang 2014を読む！どうやって推定しているのか...
+%% 今回提案した方法は、ゴーストポップがあっても大丈夫
+%% MigEstは、親は動かず、子が移動することを想定している
+%% N = Neを想定
+
+%移動には２種類ある。子の移動と親の移動である。前者は花粉やラーバなど。connectivityは前者が大事かもで、どこまで遠く行くのかも重要。移動する生物の場合、後者も重要。
 
 Estimating the number of migrants among the populations is essential for understanding population structure and dynamics, which is a fundamental process for implementing conservation and wildlife management. Especially in fisheries management, migration rate is a critical component for delineating a synchrony among the population, providing appropriate management units. There are essentially two approaches for estimating the migrant number. The first is to use the mark-recapture method estimate it directly from the population dynamics modeling with survey data. The second is to ...
 
@@ -295,10 +303,6 @@ To estimate the contemporary migration number or migration rate, our simulation-
 There may be several cases where it is desirable to apply the proposed estimator. The first case is where there is a certain number of migrants between populations, e.g., $M>100$, which is too large to be detected by population genetics method if $M$ is interpreted as effective migration number. Information on movement between populations is essential for assessing population dynamics in the context of conservation and management, even if migrant number is so large that it cannot be genetically assigned to two populations. The second is the case of the application to genetic monitoring conducted every reproductive timing (e.g., annually). This is because proposed estimators have information about contemporary migration, thus the time series data for migration reflect environmental changes, which provides insights into the underlying ecological processes. In addition, HS pairs found within the genetic population provides $N_{\rm b}$ \cite[]{wang2009new}, which is also used for assessing a genetic health. The third case is where sampling adults is difficult due to conservation purpose or other reasons instead sampling offspring is relatively easy. In this case, although $N_2$ (and $N_1$) need to be given externally for the usage of $\hat m_1$ (and $\hat M_1$), there is presently no other method for estimating adult movement especially when two populations cannot be genetically distinct, indicating that proposed method has the potential to greatly widen the scope of population monitoring. 
 
 Finally, we note some caveats in applying proposed method. Our theory for developing estimators assumes that kinships are detected without any error. There are many algorithms to detect kinship pairs from single nucleotide polymorphisms (SNPs) or short tandem repeats (STRs) \cite[e.g., ][]{Wang_2009Genetics, Huisman_2017}, although a HS pair requires many more DNA markers than a PO pair. In addition, iteroprous species potentially has several kinship types such as halfsib-uncle/nephew or halfsib-cousin, which are expected to appear frequently and should be correctly distinguished from HS pairs. It is desirable to estimate in advance how many markers are needed for kinship detections in target populations associated with simulation of a pedigree reconstruction including distant kinships (e.g., \cite{Anderson_2020}). Our proposed estimators are limited to detect one-time parental movements on a period between breeding seasons in given populations. Thus, the estimation of fine-scale spatial-temporal movements, which is available to integrate multiple type of data \cite[]{Thorson_2021}, goes beyond the scope of this paper, although population dynamics models with a coarser spatial resolution than the spatial scale for environmental layers are often used in the assessment models, which is the target of application of the proposed method. In addition, the current theory behind the estimators does not assume desynchronized reproduction within a population (e.g., skip spawning) and correlation between mobility and fertility. Our proposed estimators require the pre-specification of a population structure. Kinship relationships with information of a sample location potentially provide the chance to explore a plausible population structure via estimating migration number or rate between hypothetical populations, which contributes the determination of a management unit \cite[]{Hastings_1993, Waples_2006_MolEcol, PALSBOLL200711}. This perspective of the study will be conducted in the future.
-
-% 集団間のdifferentiation が大きい（移動率が小さい）と、見つかりにくいだけでなく、kinship assignmentsが難しい！
-%conn & bravington も引用しないと
-% MigEst by Wangとの比較も...もう一度よくWang 2014を読む！どうやって推定しているのか...
 
 %Caveat: selectivity, family correlated migration、skip spawning, 
 
